# snake-game

haskell/: .gitignore  package.yaml
haskell/app/: Main.hs
haskell/src/SnakeGame/: Cell.hs  Event.hs  Main.hs  Move.hs  Render.hs  Snake.hs  World.hs
rust/: Cargo.toml
rust/assets/ui/: press_space.ron  score.ron  title.ron
rust/resources/: config.ron  display.ron
rust/src/: components.rs  config.rs  data.rs  events.rs  lib.rs  main.rs  render.rs  resources.rs  states.rs  systems.rs
